# starlink-web-dashboard

./: Cargo.toml  README.md  config.toml
src/: main.rs
static/: index.html
