[package]
name = "starlink-web-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
starlink-grpc-client = "0.4.0"
tokio = { version = "1.28", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
axum-server = "0.7"
plotters = "0.3"
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
image = "0.25.6"
futures = "0.3"