[package]
name = "starlink-web-dashboard"
version = "0.2.1"
edition = "2021"

[dependencies]
starlink-grpc-client = "0.4.1"
tokio = { version = "1.45", features = ["full"] }
axum = { version = "0.8.4", features = ["ws"] }
axum-server = "0.7"
plotters = "0.3"
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.22"
image = "0.25.6"
futures = "0.3"